--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -3,16 +3,44 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-}
+  max-width: 800px;
 
-.nav {
-  width: 100%;
-  height: 100px;
-  background-color: red;
-}
 
-.container-2 {
+}
+.toolbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.text-container {
+  display: flex;
+  flex-direction: column;
+}
+.title {
+color: black;
+font-size: 31px;
+
+}
+.sub-title {
+margin-top: 12px;
+color: #939BA3;
+font-size: 12px;
+}
+.button {
+  background-color: #B3A920;
+  color: white;
+  border-radius: 25px;
+  height: 41px;
+}
+.list-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+
+}
+.list-title {
+  color: #525151;
+  font-size: 31px;
+  font-weight: 500;
+
 }
