--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-
+  /** background-image: url("./img/fondo.svg");
+  background-repeat: no-repeat;
+  background-position: center; **/
 }
 
 code {
