--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -29,6 +29,7 @@ font-size: 12px;
   color: white;
   border-radius: 25px;
   height: 41px;
+  padding: 10px 15px 0px 10px;
 }
 .list-container {
   margin-top: 20px;
