--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -26,10 +26,13 @@ font-size: 12px;
 }
 .button {
   background-color: #B3A920;
-  color: white;
   border-radius: 25px;
   height: 41px;
-  padding: 10px 15px 0px 10px;
+  padding: 15px 10px 0px;
+}
+.button a {
+  color: white;
+  text-decoration: none;
 }
 .list-container {
   margin-top: 20px;
