diseño de botones listo

--- a/src/Formulario/styles.css
+++ b/src/Formulario/styles.css
@@ -6,3 +6,7 @@
     padding: 20px;
     font-weight: bold;
 }
+.botones-posicion button {
+    background-color: #B3A920;
+    border-radius: 20px;
+}
