--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -1,9 +1,9 @@
-.container {
+.contenedor {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    max-width: 800px;
+    max-width: 1200px;
 }
 
 .imagen-fondo::before {
@@ -21,7 +21,7 @@
 .toolbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .text-container {
