--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 1200px;
+  max-width: 75%;
 }
 
 .imagen-fondo::before {
@@ -12,7 +12,7 @@
   z-index: -1;
   width: 50%;
   height: 100vh;
-  /* background-image: url("D:\webapp-admin\src\img\fondo.svg"); */
+  background-image: url("D:\webapp-admin\src\img\fondo.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
   margin-left: 12%;
@@ -21,7 +21,7 @@
 .toolbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .text-container {
