--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -1,3 +1,4 @@
+
 .contenedor {
   width: 100%;
   height: 100vh;
@@ -6,13 +7,13 @@
   max-width: 75%;
 }
 
-.imagen-fondo::before {
+.imagen-fondo {
   content: "";
   position: absolute;
-  z-index: -1;
+  z-index: -10;
   width: 50%;
   height: 100vh;
-  background-image: url("D:\webapp-admin\src\img\fondo.svg");
+  /* background-image: url("D:\webapp-admin\src\img\fondo.svg");*/
   background-repeat: no-repeat;
   opacity: 0.3;
   margin-left: 12%;
