--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -5,14 +5,23 @@ body,
     height: 100%;
     box-sizing: border-box;
 }
-.container-login{
+/*Root Container */
+.root-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: row;
+   }
+   .container-login{
     padding: 60px 50px;
     width: 300px;
     height: 400px;
     background-color: rgba(221, 201, 201,0.38);
   }
 .imagem-login{
-    background-color: #fff;
+    background-color: rgb(228, 222, 143);
     width: 300px;
     height: 400px;
 
@@ -22,43 +31,40 @@ body,
 }
 img{
     height: 200px;
-    width: 100%;
-    
+    width: 100%;  
 }
-/*Root Container*/
-.root-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content:center ;
-    align-items: center;
-    flex-direction: row;
+
+/* Mobile */
+@media only screen and (max-width: 568px) {
+  .root-container {
+    width: 500px; 
+    display: block;
+    align-content: center;
+    justify-content: center;
+    border: 10px solid #b3a920;
+    border-radius: 10px;
    }
-
-/*.box-controller {
-    visibility: visible;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    max-width: 24em;
-    min-width: 21em;
-    height: 35px;
-    -webkit-box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
-    box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
-    margin-bottom: 30px;
+   .container-login{
+    width: 100%;
+    height: auto;
+    padding: 40px 50px;
     align-items: center;
+    background-color: rgba(221, 201, 201,0.38);
+   }
+   .imagem-login{
+    background-color: #fff;
+    height: auto;
+    width: auto;
 }
+.login-label{
+    font-family: Oxygen, sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    padding-left: 5px;
+    color: #3e3e42;
+}
+} /* fin media query */
 
-.box-container {
-    display: flex;
-    flex-direction: column;
-    max-width: 24em;
-    min-width: 21em;
-    box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
-    border-radius: 6px;
-    padding: 24px;
-}
-*/
 
 /*Header*/
 .header {
@@ -76,7 +82,11 @@ img{
     flex-direction: column;
     justify-content: center;
 }
-
+.ingresar{
+    font-family: 'Permanent Marker', cursive;
+    font-size: 25px;
+    padding: 20px;
+}
 .input-group {
     display: flex;
     flex-direction: column;
@@ -85,11 +95,12 @@ img{
 }
 
 /*Label*/
-.login-label {
+.login-label{
     font-family: Oxygen, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 600;
     padding-left: 5px;
+    color: #3e3e42;
 }
 
 /*Input*/
