--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -37,11 +37,12 @@ img{
 /* Mobile */
 @media only screen and (max-width: 568px) {
   .root-container {
-    width: 500px; 
+    width: auto; 
+    height: auto;
     display: block;
     align-content: center;
     justify-content: center;
-    border: 10px solid #b3a920;
+    border: 7px solid #b3a920;
     border-radius: 10px;
    }
    .container-login{
