--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -31,7 +31,7 @@
 }
 
 .title {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Mansalva', cursive;
   color: black;
   font-size: 31px;
 }
