--- a/src/pages/loginFirebase/styles.css
+++ b/src/pages/loginFirebase/styles.css
@@ -1,29 +1,29 @@
-
+body{
+  width: 100%;
+  height: 100%;
+  padding: 2.5em 1.5em 1.5em 1.5em;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
+  
+}
 .input-field label{
     color: grey;
     padding: 10px;
+    font-weight: 600;
 }
 
 .input-field{
     padding: 10px;
 }
-.login-body{
-    background-size: center;
-    background-position: center;
-    background-attachment: fixed;
-}
-
 .input-cart{
     min-height: 400px;
     border-top:3px solid #b3a920;
-    margin-top: 80px;
-    margin-bottom: 100px;
 }
-.row .col {
-    margin-top:0;
-}
+
 .login{
+    border-radius: 50px;
     margin-top: 10px;
+    margin-bottom: 10px;
     background-color: rgba(179,169,32,0.23);
 }
 .login h4{
@@ -34,6 +34,12 @@
     opacity: 0.7;
 }
 .color-boton{
+    margin-bottom: 10px;
     background-color: #B3A920;
     border-radius: 20px;
+    color: black;
+    font-weight: 600;
+}
+.centrar-imagen{
+    margin-top: 75px;
 }
