--- a/src/layouts/Main/styles.css
+++ b/src/layouts/Main/styles.css
@@ -1,16 +1,18 @@
-
+.main {
+  margin-top: 20px;
+}
 .contenedor {
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 75%;
+  max-width: 90%;
 }
 
 .imagen-fondo {
   content: "";
   position: absolute;
-  z-index: -10;
+  z-index: 1;
   width: 50%;
   height: 100vh;
   /* background-image: url("D:\webapp-admin\src\img\fondo.svg");*/
@@ -33,7 +35,7 @@
 .title {
   font-family: 'Mansalva', cursive;
   color: black;
-  font-size: 31px;
+  font-size: 20px;
 }
 
 .sub-title {
@@ -41,10 +43,8 @@
   color: #7e8081;
   font-size: 12px;
 }
-
-.button {
-  background-color: #b3a920;
-  border-radius: 25px;
+.btn-floating i{
+  color: black;
 }
 
 .list-container {
@@ -55,6 +55,68 @@
 
 .list-title {
   color: #525151;
-  font-size: 31px;
+  font-size: 20px;
   font-weight: 500;
+}
+.boton-desktop{
+  display: none;
+}
+.boton-mobile{
+  display: block;
+}
+@media (min-width: 768px) {
+  /* For desktop: */
+.boton-desktop{
+  display: block;
+}
+.boton-mobile{
+  display: none;
+}
+.button {
+  color: white;
+  background-color: #b3a920;
+  border-radius: 25px;
+  font-size: 15px;
+  font-weight: 600;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  margin-left: 15px;
+}
+.title {
+  font-family: 'Mansalva', cursive;
+  color: black;
+  font-size: 31px;
+}
+.btn i {
+  font-size: 25px;
+  color: white;
+}
+}
+@media (min-width: 425px) {
+  /* For desktop: */
+.boton-desktop{
+  display: block;
+}
+.boton-mobile{
+  display: none;
+}
+.button {
+  color: white;
+  background-color: #b3a920;
+  border-radius: 25px;
+  font-size: 12px;
+  font-weight: 400;
+  padding-top: 7px;
+  padding-bottom: 40px;
+  margin-left: 18px;
+}
+.title {
+  font-family: 'Mansalva', cursive;
+  color: black;
+  font-size: 25px;
+}
+.btn i {
+  font-size: 15px;
+  color: white;
+}
 }
