--- a/src/components/CardAlert/styles.css
+++ b/src/components/CardAlert/styles.css
@@ -1,24 +1,39 @@
 .card-container {
-    width: 100%;
-    height: 51px;
-    border: solid 0.5px #B5B5B5;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 5px 0px;
+  width: 100%;
+  height: 50px;
+  border: solid 0.25px #b5b5b5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 5px;
 }
 
 .color {
-    height: 51px;
-    width: 46px;
-    background-color: red;
+  border-radius: 10px;
+  margin-left: 12px;
+}
+
+.color-green {
+  height: 30px;
+  width: 30px;
+  background-color: greenyellow;
+  border: solid 0.25px greenyellow;
+}
+
+.color-red {
+  height: 30px;
+  width: 30px;
+  background-color: red;
+  border: solid 0.25px red;
 }
 
 .right-content {
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
